--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Course Player</title>
+    <title>पठनपाठ्यक्रमः</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="styles.css">
+    <!-- Logo for "My Learnings" -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='64' height='64' rx='16' fill='%23667eea'/%3E%3Ctext x='50%' y='50%' text-anchor='middle' dominant-baseline='central' font-family='Arial, sans-serif' font-size='18' fill='white'%3EMy%20Learnings%3C/text%3E%3C/svg%3E">
+    <meta property="og:title" content="My Learnings">
+    <!-- Improved Logo for "My Learnings" -->
+    <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='64' height='64' rx='16' fill='%23667eea'/%3E%3Ccircle cx='32' cy='32' r='20' fill='%23fff'/%3E%3Cpath d='M32 18c-4.418 0-8 2.686-8 6v8c0 3.314 3.582 6 8 6s8-2.686 8-6v-8c0-3.314-3.582-6-8-6zm0 2c3.314 0 6 1.791 6 4v8c0 2.209-2.686 4-6 4s-6-1.791-6-4v-8c0-2.209 2.686-4 6-4zm-4 10h8v2h-8v-2z' fill='%23667eea'/%3E%3Ctext x='32' y='54' text-anchor='middle' font-family='Arial, sans-serif' font-size='12' fill='%23667eea'%3EML%3C/text%3E%3C/svg%3E">
+    <meta property="og:site_name" content="My Learnings">
 </head>
 <body>
     <div class="overlay" id="overlay"></div>
