--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="logo.png">
+    <link rel="icon" type="image/x-icon" href="new.png">
     <style>
         * {
             margin: 0;
@@ -552,7 +552,7 @@
         .video-wrapper iframe {
             width: 100%;
             display: block;
-            max-height: 70vh;
+            max-height: 90vh;
             object-fit: contain; 
             transition: all 0.3s;
         }
@@ -569,10 +569,9 @@
             width: 100%;
             height: 50px;
             display: block;
-            /* Apple Music में, यह कंटेनर अक्सर आस-पास के डार्क बैकग्राउंड से थोड़ा हल्का होता है */
             background: var(--bg-secondary); 
-            border-radius: 12px; /* Apple UI में सॉफ्ट कॉर्नर होते हैं */
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4); /* हल्की परछाई गहराई के लिए */
+            border-radius: 12px; 
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4); 
             padding: 0 10px; 
             border: 1px solid var(--border-color); 
         }
@@ -1233,14 +1232,15 @@
         }  
 
         .logo-apple-style {
-        display: flex;
-        align-items: center;
-        /* gap: 10px; */
-        font-family: 'SF Pro Display', 'Myriad Pro', 'Helvetica Neue', sans-serif;
-        font-weight: 600;
-        font-size: 24px;
-        color: #111;
-        letter-spacing: 0.2px;
+            display: flex;
+            align-items: center;
+            /* gap: 10px; */
+            font-family: 'SF Pro Display', 'Myriad Pro', 'Helvetica Neue', sans-serif;
+            font-weight: 600;
+            font-size: 30px;
+            color: #111;
+            letter-spacing: 0.2px;
+            margin-left: 56px;
         }
 
         .logo-apple-style img {
@@ -1248,7 +1248,7 @@
         }
 
         .logo-apple-style span {
-        background: linear-gradient(90deg, #FF2D55, #BF5AF2);
+        background: linear-gradient(90deg, #fea5b6, #ffffff);
         -webkit-background-clip: text;
         -webkit-text-fill-color: transparent;
         }
@@ -1267,8 +1267,8 @@
                 </button>
             
                 <div class="logo-apple-style">
-                    <img src="logo.png" alt="Study Icon" height="46">
-                    <span>Study</span>
+                    <img src="new.png" alt="Study Icon" height="40">
+                    
                 </div>
 
                 <div class="search-box">
