--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="new.png">
+    <link rel="icon" type="image/x-icon" href="logo.png">
     <style>
         * {
             margin: 0;
@@ -552,7 +552,7 @@
         .video-wrapper iframe {
             width: 100%;
             display: block;
-            max-height: 90vh;
+            max-height: 85vh;
             object-fit: contain; 
             transition: all 0.3s;
         }
