--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Study</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="icon" type="image/x-icon" href="logo.png">
+    <link rel="icon" type="image/x-icon" href="logo-removebg-preview.png">
     <style>
         * {
             margin: 0;
@@ -1267,8 +1267,8 @@
                 </button>
             
                 <div class="logo-apple-style">
-                    <img src="new.png" alt="Study Icon" height="40" onclick="document.getElementById('contentArea').innerHTML='<iframe src=&quot;home.html&quot; style=&quot;width:100%;height:100%;border:none;min-height:600px;&quot;></iframe>'; return false;" style="cursor:pointer;">
-                    
+                    <img src="logo-removebg-preview.png" alt="Study Icon" height="40" onclick="document.getElementById('contentArea').innerHTML='<iframe src=&quot;home.html&quot; style=&quot;width:100%;height:100%;border:none;min-height:600px;&quot;></iframe>'; return false;" style="cursor:pointer;">
+                    <span>Study</span>
                 </div>
 
                 <div class="search-box">
